name:                authorize-net
version:             0.1.0.0
synopsis:            Unofficial Haskell SDK for the Authorize.NET API
description:         Please see README.md
homepage:            http://github.com/MichaelBurge/haskell-authorize-net#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Burge
maintainer:          michaelburge@pobox.com
copyright:           Copyright: (c) 2016 Michael Burge
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.AuthorizeNet.Request
                     , Network.AuthorizeNet.Response
                     , Network.AuthorizeNet.TH
                     , Network.AuthorizeNet.Types
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , aeson
                     , lens
                     , transformers
                     , text
                     , either
                     , mtl
  default-language:    Haskell2010

test-suite authorize-net-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Network.AuthorizeNet.Api
                     , Test.Network.AuthorizeNet.Request
                     , Test.Network.AuthorizeNet.Response
                     , Test.Network.AuthorizeNet.Util
  build-depends:       base
                     , aeson
                     , bytestring
                     , authorize-net
                     , tasty
                     , tasty-hunit
                     , HUnit
                     , text
                     , raw-strings-qq
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MichaelBurge/haskell-authorize-net
